fix: markdown editor alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,34 @@ body {
 .mobile-menu-hidden {
   display: none;
 }
+
+// Markdown Editor
+
+.main-container {
+  // background-color: red;
+  height: 500px;
+}
+
+.w-md-editor {
+  height: 500px !important;
+}
+
+.w-md-editor-content {
+  height: calc(100% - 29px) !important;
+}
+.editor-fullscreen {
+  height: 100% !important;
+  background-color: yellow;
+}
+
+.w-md-editor-bar {
+  margin-top: -42px !important;
+}
+
+.w-md-editor-bar {
+  display: none !important;
+}
+
+.w-md-editor-fullscreen {
+  height: 100% !important;
+}
